kfdefs/base/monitoring/thanos-query/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: thanos-query
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: http
  selector:
    app: thanos-query
  clusterIP: None
