kfdefs/base/monitoring/thanos-query/proxy-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: thanos-query
spec:
  to:
    kind: Service
    name: thanos-query-proxy
  port:
    targetPort: oauth-proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
